--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "c6ed01ae",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "4                NaN   NaN         NaN  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "f9482765",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "0         NaN                NaN   NaN         NaN  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "5ec9beb6",
    "metadata": {},
    "outputs": [
@@ -803,7 +803,7 @@
        "9      $/gal  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "16c57b68",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
        "9      $/gal  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "93efc1c1",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
        "Alabama Aviation Gasoline Retail Sales by Refin...    2021    2021"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "5193d1ce",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1130,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "1f58e2a2",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
        "93062        NaN         NaN                NaN   NaN         NaN  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "b17028f0",
    "metadata": {},
    "outputs": [
@@ -1565,7 +1565,7 @@
        "93062        NaN         NaN                NaN   NaN         NaN  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "ba622fef",
    "metadata": {},
    "outputs": [
@@ -1806,7 +1806,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "id": "e5718761",
    "metadata": {},
    "outputs": [
@@ -2046,7 +2046,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "dc5bcf83",
    "metadata": {},
    "outputs": [
@@ -2106,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "45ed4661",
    "metadata": {},
    "outputs": [
@@ -2212,7 +2212,7 @@
        "4  2022-06-01T10:50:11-04:00  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "1c3d1877",
    "metadata": {},
    "outputs": [
@@ -2356,7 +2356,7 @@
        "Louisiana Total Gasoline Retail Sales by All Se... PET.EMA_EPM0_PTA_SLA_DPG.M 2021-01-02  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2368,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "91c9fe4a",
    "metadata": {},
    "outputs": [
@@ -2489,7 +2489,7 @@
        "Louisiana Total Gasoline Wholesale/Resale Price... PET.EMA_EPM0_PWG_SLA_DPG.M 2021-01-02  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2502,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "id": "c13752fb",
    "metadata": {},
    "outputs": [],
@@ -2530,10 +2530,7 @@
     "    \n",
     "    # Create a DataFrame from the parsed JSON data\n",
     "    df = pd.json_normalize(parsed_data)\n",
-    "    \n",
-    "    # Assuming 'date' and 'value' are keys in the JSON data, convert 'date' to datetime\n",
-    "    df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
-    "    \n",
+    "\n",
     "    # Keep only necessary columns and drop NA values\n",
     "    #df = df[['date', 'value']].dropna()\n",
     "    \n",
@@ -2553,8 +2550,7 @@
     "    \"\"\"\n",
     "    # Filter based on series_id and non-NA 'units' column\n",
     "    df = df[df['series_id'] == series_id]\n",
-    "    df = df.dropna(subset=['units'])\n",
-    "    \n",
+    "\n",
     "    # Explode the 'data' column to separate rows for each date-value pair\n",
     "    df = df.explode('data')\n",
     "    \n",
@@ -2562,20 +2558,20 @@
     "    df = df.dropna(subset=['data'])\n",
     "    df = df[df['data'].apply(lambda x: isinstance(x, list) and len(x) == 2)]\n",
     "    \n",
-    "    # # Split 'data' column into 'date' and 'value'\n",
-    "    # df[['date', 'value']] = pd.DataFrame(df['data'].tolist(), index=df.index)\n",
+    "    # Split 'data' column into 'date' and 'value'\n",
+    "    df[['date', 'value']] = pd.DataFrame(df['data'].tolist(), index=df.index)\n",
     "    \n",
-    "    # # Remove the 'data' column\n",
-    "    # df = df.drop(columns=['data'])\n",
+    "    # Remove the 'data' column\n",
+    "    df = df.drop(columns=['data'])\n",
     "    \n",
-    "    # # Convert 'date' to datetime, coercing errors to NaT\n",
-    "    # df['date'] = pd.to_datetime(df['date'], format='%Y%m%d', errors='coerce')\n",
+    "    # Convert 'date' to datetime, coercing errors to NaT\n",
+    "    df['date'] = pd.to_datetime(df['date'], format='%Y%m%d', errors='coerce')\n",
     "    \n",
-    "    # # Convert 'value' to a numeric type, coercing errors to NaN\n",
-    "    # df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
+    "    # Convert 'value' to a numeric type, coercing errors to NaN\n",
+    "    df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
     "    \n",
-    "    # # Sort by 'date' to ensure chronological order\n",
-    "    # df = df.sort_values('date')\n",
+    "    # Sort by 'date' to ensure chronological order\n",
+    "    df = df.sort_values('date')\n",
     "    \n",
     "    # Calculate log of 'value' and the difference in log_price\n",
     "    df['log_price'] = np.log(df['value'])\n",
@@ -2637,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "id": "cb1967d7",
    "metadata": {},
    "outputs": [
@@ -2656,8 +2652,8 @@
       "\u001b[1;31mKeyError\u001b[0m: 'date'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[80], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mload_gas_price_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/raw/PET/PET.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m df\n",
-      "Cell \u001b[1;32mIn[79], line 26\u001b[0m, in \u001b[0;36mload_gas_price_data\u001b[1;34m(filepath)\u001b[0m\n\u001b[0;32m     23\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mjson_normalize(parsed_data)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Assuming 'date' and 'value' are keys in the JSON data, convert 'date' to datetime\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# Keep only necessary columns and drop NA values\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m#df = df[['date', 'value']].dropna()\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mload_gas_price_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/raw/PET/PET.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m df\n",
+      "Cell \u001b[1;32mIn[19], line 26\u001b[0m, in \u001b[0;36mload_gas_price_data\u001b[1;34m(filepath)\u001b[0m\n\u001b[0;32m     23\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mjson_normalize(parsed_data)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Assuming 'date' and 'value' are keys in the JSON data, convert 'date' to datetime\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# Keep only necessary columns and drop NA values\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m#df = df[['date', 'value']].dropna()\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
       "File \u001b[1;32mc:\\Users\\LNshuti\\AppData\\Local\\miniconda3\\envs\\oil-prices\\lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[1;32mc:\\Users\\LNshuti\\AppData\\Local\\miniconda3\\envs\\oil-prices\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: 'date'"
